# mrp

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  requirements.txt
.canto/: delegate.toml  policy.toml  repo.toml  workers.toml
.codex/: hooks.json
app/critic/: .gitignore  README.md  pyproject.toml  tria-manifest.json
app/critic/critic/: audit.py  batch.py  catalog.py  cli.py  config.py  dsp.py  eval.py  impression.py  ingest.py  pipeline.py  record.py  schema.py  synthesize.py  tags.py  usage.py  utils.py  writeback.py
app/critic/critic/album/: cli.py  cohesion.py  features.py  recontextualize.py  record.py  synthesize.py
app/critic/critic/personas/: default.md  liner.md  pundit.md
app/critic/critic/prompts/: album_critic_system.md  critic_system.md  track_context_batch_system.md  track_context_system.md
app/critic/examples/: run_one.md
app/critic/manifests/: you-become-the-night-fix.json
app/promoter/: pyproject.toml
app/promoter/mrp_promoter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/promoter/promoter/: cli.py  config.py  gather.py  generate.py  writeback.py
app/promoter/promoter/prompts/: bio_system.md  blurb_system.md
content/: redirects.yaml
deploy/: .allow-deploy.example  targets.yaml
docs/: AGENT-USAGE.md  CONTENT-MODEL.md  CONTENT-PIPELINE.md  DEPLOYMENT.md  MRP Repository Cleanup and Architecture Reset Plan.md  MRP v0.1 Specification.md  MRP-IMPLEMENTATION-PLAN.md  MRP-v0.1.1-FULL-SITE-STAGING-PLAN.md  MRP-v0.1.1-REVIEW.md  MRP-v0.1.2-REVIEW.md  (+9 more)
(+762 files in other folders)
