[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mrp-critic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10",
    "pyloudnorm>=0.1",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tags = ["laion-clap", "torch", "torchvision"]
dev = ["pytest>=8.0"]

[project.scripts]
critic = "critic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["critic*"]
