[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mrp-promoter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
promoter = "promoter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promoter*"]
